// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Invoice detail snapshots > matches the detail view for Defaulted status 1`] = `
<DocumentFragment>
  <article
    class="rounded-2xl border border-outline-variant/20 bg-surface-container-lowest p-6 shadow-sm"
  >
    <div
      class="flex items-start justify-between gap-4 border-b border-outline-variant/10 pb-4"
    >
      <div>
        <p
          class="text-xs font-bold uppercase tracking-widest text-primary"
        >
          Invoice Detail
        </p>
        <h2
          class="mt-2 text-2xl font-bold"
        >
          Invoice #5
        </h2>
      </div>
      <span
        class="rounded-full px-3 py-1 text-xs font-bold uppercase bg-red-100 text-red-800"
      >
        Defaulted
      </span>
    </div>
    <dl
      class="mt-6 grid gap-3 text-sm"
    >
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Freelancer
        </dt>
        <dd
          class="font-mono"
        >
          GBBB...BBRY
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Payer
        </dt>
        <dd
          class="font-mono"
        >
          GDDD...DDD2
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Face value
        </dt>
        <dd
          class="font-bold"
        >
          4,500 USDC
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Discount
        </dt>
        <dd>
          6.50%
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Due date
        </dt>
        <dd>
          3/1/2026
        </dd>
      </div>
    </dl>
  </article>
</DocumentFragment>
`;

exports[`Invoice detail snapshots > matches the detail view for Funded status 1`] = `
<DocumentFragment>
  <article
    class="rounded-2xl border border-outline-variant/20 bg-surface-container-lowest p-6 shadow-sm"
  >
    <div
      class="flex items-start justify-between gap-4 border-b border-outline-variant/10 pb-4"
    >
      <div>
        <p
          class="text-xs font-bold uppercase tracking-widest text-primary"
        >
          Invoice Detail
        </p>
        <h2
          class="mt-2 text-2xl font-bold"
        >
          Invoice #2
        </h2>
      </div>
      <span
        class="rounded-full px-3 py-1 text-xs font-bold uppercase bg-blue-100 text-blue-800"
      >
        Funded
      </span>
    </div>
    <dl
      class="mt-6 grid gap-3 text-sm"
    >
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Freelancer
        </dt>
        <dd
          class="font-mono"
        >
          GBBB...BBRY
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Payer
        </dt>
        <dd
          class="font-mono"
        >
          GDDD...DDD2
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Face value
        </dt>
        <dd
          class="font-bold"
        >
          2,250 USDC
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Discount
        </dt>
        <dd>
          4.00%
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Due date
        </dt>
        <dd>
          4/27/2027
        </dd>
      </div>
    </dl>
  </article>
</DocumentFragment>
`;

exports[`Invoice detail snapshots > matches the detail view for Paid status 1`] = `
<DocumentFragment>
  <article
    class="rounded-2xl border border-outline-variant/20 bg-surface-container-lowest p-6 shadow-sm"
  >
    <div
      class="flex items-start justify-between gap-4 border-b border-outline-variant/10 pb-4"
    >
      <div>
        <p
          class="text-xs font-bold uppercase tracking-widest text-primary"
        >
          Invoice Detail
        </p>
        <h2
          class="mt-2 text-2xl font-bold"
        >
          Invoice #4
        </h2>
      </div>
      <span
        class="rounded-full px-3 py-1 text-xs font-bold uppercase bg-emerald-100 text-emerald-800"
      >
        Paid
      </span>
    </div>
    <dl
      class="mt-6 grid gap-3 text-sm"
    >
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Freelancer
        </dt>
        <dd
          class="font-mono"
        >
          GAAA...AWHF
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Payer
        </dt>
        <dd
          class="font-mono"
        >
          GEEE...EEEF
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Face value
        </dt>
        <dd
          class="font-bold"
        >
          975 USDC
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Discount
        </dt>
        <dd>
          3.00%
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Due date
        </dt>
        <dd>
          5/10/2026
        </dd>
      </div>
    </dl>
  </article>
</DocumentFragment>
`;

exports[`Invoice detail snapshots > matches the detail view for PartiallyFunded status 1`] = `
<DocumentFragment>
  <article
    class="rounded-2xl border border-outline-variant/20 bg-surface-container-lowest p-6 shadow-sm"
  >
    <div
      class="flex items-start justify-between gap-4 border-b border-outline-variant/10 pb-4"
    >
      <div>
        <p
          class="text-xs font-bold uppercase tracking-widest text-primary"
        >
          Invoice Detail
        </p>
        <h2
          class="mt-2 text-2xl font-bold"
        >
          Invoice #3
        </h2>
      </div>
      <span
        class="rounded-full px-3 py-1 text-xs font-bold uppercase bg-sky-100 text-sky-800"
      >
        PartiallyFunded
      </span>
    </div>
    <dl
      class="mt-6 grid gap-3 text-sm"
    >
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Freelancer
        </dt>
        <dd
          class="font-mono"
        >
          GCCC...CCC6
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Payer
        </dt>
        <dd
          class="font-mono"
        >
          GEEE...EEEF
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Face value
        </dt>
        <dd
          class="font-bold"
        >
          3,100 USDC
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Discount
        </dt>
        <dd>
          5.25%
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Due date
        </dt>
        <dd>
          5/3/2027
        </dd>
      </div>
    </dl>
  </article>
</DocumentFragment>
`;

exports[`Invoice detail snapshots > matches the detail view for Pending status 1`] = `
<DocumentFragment>
  <article
    class="rounded-2xl border border-outline-variant/20 bg-surface-container-lowest p-6 shadow-sm"
  >
    <div
      class="flex items-start justify-between gap-4 border-b border-outline-variant/10 pb-4"
    >
      <div>
        <p
          class="text-xs font-bold uppercase tracking-widest text-primary"
        >
          Invoice Detail
        </p>
        <h2
          class="mt-2 text-2xl font-bold"
        >
          Invoice #1
        </h2>
      </div>
      <span
        class="rounded-full px-3 py-1 text-xs font-bold uppercase bg-amber-100 text-amber-800"
      >
        Pending
      </span>
    </div>
    <dl
      class="mt-6 grid gap-3 text-sm"
    >
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Freelancer
        </dt>
        <dd
          class="font-mono"
        >
          GAAA...AWHF
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Payer
        </dt>
        <dd
          class="font-mono"
        >
          GDDD...DDD2
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Face value
        </dt>
        <dd
          class="font-bold"
        >
          1,500 USDC
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Discount
        </dt>
        <dd>
          2.50%
        </dd>
      </div>
      <div
        class="flex items-center justify-between gap-4"
      >
        <dt
          class="text-on-surface-variant"
        >
          Due date
        </dt>
        <dd>
          5/15/2027
        </dd>
      </div>
    </dl>
  </article>
</DocumentFragment>
`;
